Fix image cropping issue

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 .App {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
 	height: 100%;
 	width: 100%;
 }
